# my-jira

./: .gitignore  Cargo.toml
data/: db.json  foo.json  foo2.json
src/: db.rs  io_utils.rs  lib.rs  lib_notused.rs  main.rs  models.rs  navigator.rs
src/ui/: mod.rs  prompts.rs
src/ui/pages/: mod.rs  page_helpers.rs
tests/: integration_test.rs
