[package]
name = "my-jira"
version = "0.1.0"
edition = "2021"

# [lib]
# path = "src/lib.rs"
# name = "my_jira"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
itertools = "0.12.1"
clearscreen = "2.0.1"

[dev-dependencies]
tempfile = "3.9.0"
